Fix spacing of dark/light mode button in nav bar

--- a/app/assets/stylesheets/components/_loggedin-nav-bar.scss
+++ b/app/assets/stylesheets/components/_loggedin-nav-bar.scss
@@ -13,9 +13,8 @@
 
 .loggedin-nav-link {
   display: inline-block;
-  padding-top: 5px;
+  padding: 5px 7px 2px 7px;
   margin-right: 30px;
-  margin-left: 30px;
   color: var(--color);
   font-size: 12.5px;
   font-family: DIN Pro,-apple-system,BlinkMacSystemFont, sans-serif;
